Added all the code from the challenges assigned to us.

--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -1,1 +1,12 @@
-html  
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>The Alert Method</title>
+</head>
+<body>
+	<script type="text/javascript" src="JS/main.js"></script>
+
+</body>
+</html>
