Code for PROJECT2_FUNCTIONS assignment

--- a/Basic JavaScript Projects/Project2_functions/index.html
+++ b/Basic JavaScript Projects/Project2_functions/index.html
@@ -9,7 +9,11 @@
 	<script type="text/javascript" src="js/main.js"></script> <!-- This will call our Javascript -->
 	<div>
 	<button onclick="displayDate()">Check Time!</button>
-	<p id="tiempo"></p>
+	<p id="tiempo"></p> <!-- This displays the function above -->
+	</div>
+
+	<div>
+		<p id="rodeo" onclick="writeSentence()">Rodeo</p> <!-- This is for the concatenate challenge, click on Rodeo -->
 	</div>
 </body>
 </html>
