--- a/Basic JavaScript Projects/Project4_dictionaries/index.html
+++ b/Basic JavaScript Projects/Project4_dictionaries/index.html
@@ -1,1 +1,13 @@
-doctype 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+	<script type="text/javascript" src="JS/main.js"></script>
+</head>
+<body>
+	<p id="Dictionary" onclick="My_dict()">Click here please!</p>
+
+</body>
+</html>
