--- a/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Project 9 and Slide Show</title>
+  <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
 	<p>How many seconds would you like to set your alarm for?</p>
@@ -18,19 +19,19 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="img/Brookbridge.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="text">The Brooklyn Bridge</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
     <img src="img/GGbridge.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <div class="text">The Golden Gate Bridge</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
     <img src="img/tilikum.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <div class="text">The Tilikum Crossing Bridge</div>
   </div>
 
   <!-- Next and previous buttons -->
