Code for JS Projects #1

--- a/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
+++ b/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
@@ -20,6 +20,17 @@
 	<p id="outPut"></p>
 
 
+	<h5 class="fruits">Banana</h5>
+	<h4 class="fruits">Apples</h4>
+	<button onclick="fruitColor()">Click me!</button>
+
+	<!-- Canvas Element -->
+	<div>
+		<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+		</canvas>
+	</div>
+	
+
 <script type="text/javascript" src="JavaScript/JavaScript_1.js"></script>
 </body>
 </html>
