code for tictactoe project

--- a/Basic JavaScript Projects/TicTacToe/TicTacToe.html
+++ b/Basic JavaScript Projects/TicTacToe/TicTacToe.html
@@ -6,8 +6,9 @@
 	<title> Free Tic Tac Toe Online</title>
 	<meta name="description" content="Play Tic Tac Toe online for free!">
 	<link rel="stylesheet" type="text/css" href="css/game.css">
+	<script type="text/javascript" src="js/tictactoe.js" defer></script>
 </head>
-<body>
+<body id="body">
 	<h1>Tic Tac Toe Game</h1>
 	<!-- This container is needed to overlay our canvasover our table. -->
 	<div class="center-container">
@@ -31,7 +32,6 @@
 			</tr>
 		</table>
 	</div>
-
 
 </body>
 </html>
