Added vw unit sizing

--- a/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
+++ b/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
@@ -6,8 +6,8 @@
 	<title>The Switch statement</title>
 </head>
 <body>
-	<h1 id="header"> Animal Characteristics</h1>
-	<p id="prompt">Pick an Animal from the list below:</p>
+	<h1 id="header" style="font-size:2vw;"> Animal Characteristics</h1>
+	<p id="prompt" style="font-size:2vw;">Pick an Animal from the list below:</p>
 		<ul>
 			<li>lions</li>
 			<li>bears</li>
