--- a/Basic JavaScript Projects/ElementsChall.html
+++ b/Basic JavaScript Projects/ElementsChall.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src="ElementsChall.js"></script>
 	<title>Elements Challenge</title>
 </head>
 <body>
@@ -10,10 +11,22 @@
 	<p>I will copy the URL and paste it underneath this line</p>
 	<p id="elements"></p>
 
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		let url = window.document.URL;
 		document.getElementById('elements').innerHTML = url;
-	</script>
+	</script> -->
+
+	<h3>Form Challenge/Data validation</h3>
+		<form id="tform" onsubmit="validateForm()" method="post">
+			<label for="firstname">First name:</label><br>
+			<input type="text" id="fname" name="fname" ><br>
+			<label for="lastname">Last name:</label><br>
+			<input type="text" id="lname" name="lname" ><br>
+			<label for="phonenumber">Phone Number:</label><br>
+			<input type="tel" id="phone" name="phone"><br><br>
+			<input type="submit" value="Submit">
+		</form> 
+
 
 </body>
 </html>
