keyframe and popup code

--- a/Basic JavaScript Projects/JS Challenges/popup.html
+++ b/Basic JavaScript Projects/JS Challenges/popup.html
@@ -34,6 +34,18 @@
 
 	</div>
 
+	<!-- End of PopUp form -->
+
+	<!-- Keyframe challenge -->
+	<h2 id="keyHead">This is the @keyframes Challenge</h2>
+	<p>The square will turn into a rectangle and it will also change colors</p>
+	<div id="keyFrame"></div>
+	<!-- End Keyfram Challenge -->
+
+	<!-- Zoom effect -->
+	<img id="shika" src="shika.png">
+	<!-- End Zoom Effect -->
+
 
 
 
