--- a/Basic JavaScript Projects/JS Challenges/ElementsChall.html
+++ b/Basic JavaScript Projects/JS Challenges/ElementsChall.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="ElementsChall.js"></script>
+	<script type="text/javascript" src="JS Challenge js/ElementsChall.js"></script>
 	<title>Elements Challenge</title>
 </head>
 <body>
