--- a/Basic JavaScript Projects/JS Challenges/ElementsChall.html
+++ b/Basic JavaScript Projects/JS Challenges/ElementsChall.html
@@ -28,5 +28,20 @@
 		</form> 
 
 
+	<!-- On double click challenge -->
+	<p id="double" ondblclick="effect()">
+		Double Click on this Paragraph <br>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+
+	<script>
+		function effect() {
+			document.getElementById('double').style.color = 'blue'
+		}
+	</script>
+
+	<!-- End On double click challenge -->
+
+
 </body>
 </html>
